# project2

./: CMakeLists.txt  DatalogProgram.cpp  Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  Token.cpp  main.cpp
